# Projeto_LP_AssinaturaDigital

./: .gitignore  Cargo.toml  README.md
Projeto_LP/: Cargo.toml
Projeto_LP/src/: main.rs
src/: assinatura.rs  aux_fn.rs  hash.rs  main.rs  oaep.rs  pdf_manipulation.rs  primos.rs  rsa.rs  string_conv.rs  string_to_num.rs
