[package]
name = "Projeto_LP"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
sha3 = "0.10.8"
sha1 = "0.10"
lopdf = "0.31"

[features]
default = ["nom_parser"] # Ativa "nom_parser" por padrão
async = [] # Define a feature "async"
nom_parser = [] # Define a feature "nom_parser"

